<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".shop_list.ShopListActivity">

    <Button
            android:text="@string/sing_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.032"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password"/>
    <Button
            android:text="@string/sing_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_sign_in" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.034"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sing_up" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.75"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.032" app:layout_constraintTop_toBottomOf="@+id/confirm_password"/>
    <EditText
            android:layout_width="276dp"
            android:layout_height="44dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/password" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintVertical_bias="0.284"/>
    <EditText
            android:layout_width="276dp"
            android:layout_height="43dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/login"
            android:hint="@string/e_mail" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/password" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.98"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:importantForAutofill="no"
            app:layout_constraintHorizontal_bias="0.504"/>
    <TextView
            android:layout_width="279dp"
            android:layout_height="34dp"
            android:id="@+id/errorField" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/login" app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintVertical_bias="0.694" android:textColor="#D81B60" android:textStyle="bold"
            android:visibility="visible" tools:visibility="visible" android:focusable="auto"
            android:focusableInTouchMode="false"/>
    <EditText
            android:layout_width="277dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirm_password" android:hint="@string/confirm_password" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.01" android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/password"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_sign_up" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.034"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>